<?xml version="1.0"?>
<package format="2">
  <name>netft_control</name>
  <version>0.1.0</version>
  <description>The netft_control package</description>

  <license>BSD</license>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez Ruiz</maintainer>
  <author email="fsuarez6@gmail.com">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/fsuarez6/netft</url>
  <url type="bugtracker">https://github.com/fsuarez6/netft/issues</url>
  <url type="repository">https://github.com/fsuarez6/netft</url>

  <depend>controller_manager</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tinyxml</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
